2007-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (set-auto-mode): Handle also remote files wrt
	`auto-mode-alist'.

2007-08-04  Jay Belanger  <belanger@localhost.localdomain>

	* calc/calcalg3.el (calc-curve-fit): Add support for nonlinear
	curves and plotting.

	* calc/calc-nlfit.el: New file.

2007-08-04  Glenn Morris  <rgm@gnu.org>

	* autorevert.el (auto-revert-tail-mode): auto-revert-tail-pos is
	zero, not nil, when the library is first loaded.  Check for a file
	that has been modified on disk.

	* progmodes/cperl-mode.el (cperl-compilation-error-regexp-alist):
	Remove duplicate defvar preventing initialization.
	(cperl-mode): Fix compilation-error-regexp-alist-alist setting.

2007-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-font-lock-keywords): Fix up false positives.
	(diff-beginning-of-file): Adjust to the fact that diff-file-header-re
	may match up to 4 lines.
	(diff-beginning-of-file-and-junk): Rewrite.

2007-08-03  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Evaluate require only during compilation.
	(pr-version): New version 6.9.1.
	(deactivate-mark): Replace (defvar VAR nil) by (defvar VAR).
	(pr-global-menubar): Fix code.

2007-08-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.el (term-erase-in-display): Fix case when point is not at
	the beginning of the line.

2007-08-03  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-ext.el (math-get-value,math-get-sdev)
	(math-contains-sdev): New functions.

	* calc/calc-graph.el (calc-graph-format-data)
	(calc-graph-add-curve): Check for error forms.
	(calc-graph-set-styles): Add option for error forms.

2007-08-03  Miles Bader  <miles@gnu.org>

	* vc-hooks.el (vc-handled-backends): Change capitalization of VC
	backend names for new backends to `Git', `Hg', and `Bzr'.
	* vc-hg.el (vc-hg-dired-state-info): Use `Hg' as VC backend name,
	not `HG'.
	* vc-git.el (vc-git-dired-state-info): Use `Git' as VC backend
	name, not `GIT'.